--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "mongoose": "^6.8.3",
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.8.0",
+    "otp-generator": "^4.0.0",
     "path": "^0.12.7",
     "puppeteer": "^19.5.2",
     "two-step-auth": "^1.1.2"
